# Vision-Aid

./: README.md  training_data.tar.xz
nn/: ambulence_data.cfg  ambulence_data.data  ambulence_data.names  ambulence_data_train.txt
src/: CMakeLists.txt  main.cpp
