CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT (mainProject C CXX)

SET (CMAKE_BUILD_TYPE Release)
SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_DEFINITIONS ("-Wall -Wextra -Werror -Wno-unused-parameter")

FIND_PACKAGE (Threads	REQUIRED)
FIND_PACKAGE (OpenCV	REQUIRED)
FIND_LIBRARY (DARKHELP	darkhelp)
FIND_LIBRARY (DARKNET	darknet	)

INCLUDE_DIRECTORIES (${OpenCV_INCLUDE_DIRS})

FILE (GLOB SOURCE *.cpp)
LIST (SORT SOURCE)

ADD_EXECUTABLE (main ${SOURCE})
TARGET_LINK_LIBRARIES (main Threads::Threads ${DARKHELP} ${DARKNET} ${OpenCV_LIBS})

